--- a/archives/toutiao-search/2024-04-20.md
+++ b/archives/toutiao-search/2024-04-20.md
@@ -1,68 +1,79 @@
 # 2024-04-20
 
-共 97 条
+共 101 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 20 2024 05:00:40 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 20 2024 06:00:54 GMT+0800 (China Standard Time) -->
 1. [解放军信息支援部队成立](https://so.toutiao.com/search?keyword=解放军信息支援部队成立)
 1. [以色列开始反击伊朗 地点有何讲究](https://so.toutiao.com/search?keyword=以色列开始反击伊朗+地点有何讲究)
 1. [2024春天田野里的新故事](https://so.toutiao.com/search?keyword=2024春天田野里的新故事)
 1. [毕毅任解放军信息支援部队司令员](https://so.toutiao.com/search?keyword=毕毅任解放军信息支援部队司令员)
 1. [重庆通报燃气费多计多收问题](https://so.toutiao.com/search?keyword=重庆通报燃气费多计多收问题)
 1. [在伊朗中国留学生谈以色列空袭伊朗](https://so.toutiao.com/search?keyword=在伊朗中国留学生谈以色列空袭伊朗)
-1. [哈尔滨啤酒检出的呕吐毒素是什么](https://so.toutiao.com/search?keyword=哈尔滨啤酒检出的呕吐毒素是什么)
 1. [信息支援部队是全新打造的战略性兵种](https://so.toutiao.com/search?keyword=信息支援部队是全新打造的战略性兵种)
+1. [河北承德多车相撞 殡葬所：已致8死](https://so.toutiao.com/search?keyword=河北承德多车相撞+殡葬所：已致8死)
 1. [以导弹击中伊朗境内目标画面曝光](https://so.toutiao.com/search?keyword=以导弹击中伊朗境内目标画面曝光)
 1. [男子开宝马撞人致6死 被执行死刑](https://so.toutiao.com/search?keyword=男子开宝马撞人致6死+被执行死刑)
-1. [老人下跪求饶 旁边人为何拉着城管](https://so.toutiao.com/search?keyword=老人下跪求饶+旁边人为何拉着城管)
-1. [直击伊朗以色列多地实况](https://so.toutiao.com/search?keyword=直击伊朗以色列多地实况)
 1. [多国驻联合国代表在以方发言前离席](https://so.toutiao.com/search?keyword=多国驻联合国代表在以方发言前离席)
+1. [直击伊朗以色列多地实况](https://so.toutiao.com/search?keyword=直击伊朗以色列多地实况)
+1. [老人下跪求饶 旁边人为何拉着城管](https://so.toutiao.com/search?keyword=老人下跪求饶+旁边人为何拉着城管)
 1. [官方辟谣“单次住院不能超过15天”](https://so.toutiao.com/search?keyword=官方辟谣“单次住院不能超过15天”)
 1. [外媒：美方证实以色列导弹击中伊朗](https://so.toutiao.com/search?keyword=外媒：美方证实以色列导弹击中伊朗)
-1. [抗战烈士墓中发现年轻女子照片](https://so.toutiao.com/search?keyword=抗战烈士墓中发现年轻女子照片)
 1. [纪委工作人员酒驾被查？官方通报](https://so.toutiao.com/search?keyword=纪委工作人员酒驾被查？官方通报)
-1. [俄媒：伊朗找到攻破以色列防御办法](https://so.toutiao.com/search?keyword=俄媒：伊朗找到攻破以色列防御办法)
-1. [东郊到家女技师月入6万平台抽50%](https://so.toutiao.com/search?keyword=东郊到家女技师月入6万平台抽50%)
-1. [河北承德多车相撞 殡葬所：已致8死](https://so.toutiao.com/search?keyword=河北承德多车相撞+殡葬所：已致8死)
-1. [专家：伊以恐陷入没有尽头的报复螺旋](https://so.toutiao.com/search?keyword=专家：伊以恐陷入没有尽头的报复螺旋)
-1. [燃气费1.5万女子：无奈交费恢复用气](https://so.toutiao.com/search?keyword=燃气费1.5万女子：无奈交费恢复用气)
-1. [专家：美又一次站在国际社会对立面](https://so.toutiao.com/search?keyword=专家：美又一次站在国际社会对立面)
-1. [美媒：以色列已成内部分裂的国家](https://so.toutiao.com/search?keyword=美媒：以色列已成内部分裂的国家)
+1. [哈尔滨啤酒检出的呕吐毒素是什么](https://so.toutiao.com/search?keyword=哈尔滨啤酒检出的呕吐毒素是什么)
 1. [解放军形成新型军兵种结构布局](https://so.toutiao.com/search?keyword=解放军形成新型军兵种结构布局)
-1. [麒麟9010跑分出炉](https://so.toutiao.com/search?keyword=麒麟9010跑分出炉)
-1. [神十八载人飞行任务标识如何诞生](https://so.toutiao.com/search?keyword=神十八载人飞行任务标识如何诞生)
 1. [25岁女子被丈夫割喉杀害后的340天](https://so.toutiao.com/search?keyword=25岁女子被丈夫割喉杀害后的340天)
-1. [伊朗媒体：伊朗核设施未受损](https://so.toutiao.com/search?keyword=伊朗媒体：伊朗核设施未受损)
-1. [伊朗：已告知美国 不寻求事态升级](https://so.toutiao.com/search?keyword=伊朗：已告知美国+不寻求事态升级)
-1. [媒体评打人男子叫嚣是镇书记儿子](https://so.toutiao.com/search?keyword=媒体评打人男子叫嚣是镇书记儿子)
-1. [三部门要求商家储备现金意味着什么](https://so.toutiao.com/search?keyword=三部门要求商家储备现金意味着什么)
-1. [第一批小米SU7车主已经快赚回本了](https://so.toutiao.com/search?keyword=第一批小米SU7车主已经快赚回本了)
-1. [湘潭大学身亡学生的同学老师发声](https://so.toutiao.com/search?keyword=湘潭大学身亡学生的同学老师发声)
-1. [极氪009光辉版正式上市](https://so.toutiao.com/search?keyword=极氪009光辉版正式上市)
-1. [警方再通报男子骚扰女孩还打家长](https://so.toutiao.com/search?keyword=警方再通报男子骚扰女孩还打家长)
-1. [智障男子被当劫犯关9年 再审改判无罪](https://so.toutiao.com/search?keyword=智障男子被当劫犯关9年+再审改判无罪)
+1. [专家：美又一次站在国际社会对立面](https://so.toutiao.com/search?keyword=专家：美又一次站在国际社会对立面)
+1. [俄媒：伊朗找到攻破以色列防御办法](https://so.toutiao.com/search?keyword=俄媒：伊朗找到攻破以色列防御办法)
 1. [女生跳桥轻生 路人发现后立即呼救](https://so.toutiao.com/search?keyword=女生跳桥轻生+路人发现后立即呼救)
+1. [湘潭大学身亡学生的同学老师发声](https://so.toutiao.com/search?keyword=湘潭大学身亡学生的同学老师发声)
+1. [美媒：以色列已成内部分裂的国家](https://so.toutiao.com/search?keyword=美媒：以色列已成内部分裂的国家)
+1. [极氪009光辉版正式上市](https://so.toutiao.com/search?keyword=极氪009光辉版正式上市)
+1. [大妈摆摊遇城管 直接将饼发给路人](https://so.toutiao.com/search?keyword=大妈摆摊遇城管+直接将饼发给路人)
+1. [专家：伊以恐陷入没有尽头的报复螺旋](https://so.toutiao.com/search?keyword=专家：伊以恐陷入没有尽头的报复螺旋)
+1. [女子停车堵路警察劝离无果](https://so.toutiao.com/search?keyword=女子停车堵路警察劝离无果)
+1. [媒体评打人男子叫嚣是镇书记儿子](https://so.toutiao.com/search?keyword=媒体评打人男子叫嚣是镇书记儿子)
+1. [越野车驶入麦田来回碾压](https://so.toutiao.com/search?keyword=越野车驶入麦田来回碾压)
+1. [伊朗：已告知美国 不寻求事态升级](https://so.toutiao.com/search?keyword=伊朗：已告知美国+不寻求事态升级)
+1. [警方再通报男子骚扰女孩还打家长](https://so.toutiao.com/search?keyword=警方再通报男子骚扰女孩还打家长)
+1. [三部门要求商家储备现金意味着什么](https://so.toutiao.com/search?keyword=三部门要求商家储备现金意味着什么)
+1. [阿根廷正式申请加入北约全球伙伴](https://so.toutiao.com/search?keyword=阿根廷正式申请加入北约全球伙伴)
+1. [麒麟9010跑分出炉](https://so.toutiao.com/search?keyword=麒麟9010跑分出炉)
+1. [南京市民吐槽换燃气表后燃气费翻倍](https://so.toutiao.com/search?keyword=南京市民吐槽换燃气表后燃气费翻倍)
+1. [儿子打工十几年没回家 老人急寻](https://so.toutiao.com/search?keyword=儿子打工十几年没回家+老人急寻)
+1. [男子地摊吃饭要求开发票还少给钱](https://so.toutiao.com/search?keyword=男子地摊吃饭要求开发票还少给钱)
+1. [燃气费1.5万女子：无奈交费恢复用气](https://so.toutiao.com/search?keyword=燃气费1.5万女子：无奈交费恢复用气)
+1. [以色列是面子的报复还是里子的攻击](https://so.toutiao.com/search?keyword=以色列是面子的报复还是里子的攻击)
+1. [古特雷斯呼吁停止中东“报复循环”](https://so.toutiao.com/search?keyword=古特雷斯呼吁停止中东“报复循环”)
+1. [余承东称智界S7将有Pura70同款配色](https://so.toutiao.com/search?keyword=余承东称智界S7将有Pura70同款配色)
+1. [浙江宁波发现近危级珍稀植物水晶兰](https://so.toutiao.com/search?keyword=浙江宁波发现近危级珍稀植物水晶兰)
+1. [特斯拉能重振市场信心吗](https://so.toutiao.com/search?keyword=特斯拉能重振市场信心吗)
 1. [官方否认骚扰女孩男子是镇书记儿子](https://so.toutiao.com/search?keyword=官方否认骚扰女孩男子是镇书记儿子)
-1. [证监会：调降基金股票交易佣金费率](https://so.toutiao.com/search?keyword=证监会：调降基金股票交易佣金费率)
+1. [阿姨想用中铺换下铺 全程礼貌询问](https://so.toutiao.com/search?keyword=阿姨想用中铺换下铺+全程礼貌询问)
+1. [国内液化天然气价格集中上涨](https://so.toutiao.com/search?keyword=国内液化天然气价格集中上涨)
+1. [周深在联合国总部献唱](https://so.toutiao.com/search?keyword=周深在联合国总部献唱)
 1. [邱毅嘲讽朱立伦开出访问大陆条件](https://so.toutiao.com/search?keyword=邱毅嘲讽朱立伦开出访问大陆条件)
+1. [证监会：调降基金股票交易佣金费率](https://so.toutiao.com/search?keyword=证监会：调降基金股票交易佣金费率)
+1. [抗战烈士墓中发现年轻女子照片](https://so.toutiao.com/search?keyword=抗战烈士墓中发现年轻女子照片)
+1. [东郊到家女技师月入6万平台抽50%](https://so.toutiao.com/search?keyword=东郊到家女技师月入6万平台抽50%)
+1. [神十八载人飞行任务标识如何诞生](https://so.toutiao.com/search?keyword=神十八载人飞行任务标识如何诞生)
+1. [伊朗媒体：伊朗核设施未受损](https://so.toutiao.com/search?keyword=伊朗媒体：伊朗核设施未受损)
+1. [第一批小米SU7车主已经快赚回本了](https://so.toutiao.com/search?keyword=第一批小米SU7车主已经快赚回本了)
+1. [智障男子被当劫犯关9年 再审改判无罪](https://so.toutiao.com/search?keyword=智障男子被当劫犯关9年+再审改判无罪)
 1. [实测华为Pura70系列游戏能力](https://so.toutiao.com/search?keyword=实测华为Pura70系列游戏能力)
 1. [伊朗革命卫队所有基地最高级别战备](https://so.toutiao.com/search?keyword=伊朗革命卫队所有基地最高级别战备)
-1. [男子地摊吃饭要求开发票还少给钱](https://so.toutiao.com/search?keyword=男子地摊吃饭要求开发票还少给钱)
 1. [证监会新规每年为投资者省200亿元](https://so.toutiao.com/search?keyword=证监会新规每年为投资者省200亿元)
 1. [机构：华为Pura70今年出货或超千万部](https://so.toutiao.com/search?keyword=机构：华为Pura70今年出货或超千万部)
 1. [中信证券回应处罚事先告知书](https://so.toutiao.com/search?keyword=中信证券回应处罚事先告知书)
-1. [阿根廷正式申请加入北约全球伙伴](https://so.toutiao.com/search?keyword=阿根廷正式申请加入北约全球伙伴)
 1. [男子割喉杀妻一审被判处死缓](https://so.toutiao.com/search?keyword=男子割喉杀妻一审被判处死缓)
 1. [中信证券收行政处罚事先告知书](https://so.toutiao.com/search?keyword=中信证券收行政处罚事先告知书)
 1. [伊朗等多地传出爆炸声](https://so.toutiao.com/search?keyword=伊朗等多地传出爆炸声)
 1. [华北等地局地降温幅度将超10℃](https://so.toutiao.com/search?keyword=华北等地局地降温幅度将超10℃)
 1. [媒体：让骗人的“特供酒”彻底停供](https://so.toutiao.com/search?keyword=媒体：让骗人的“特供酒”彻底停供)
 1. [英美宣布对伊朗实施制裁](https://so.toutiao.com/search?keyword=英美宣布对伊朗实施制裁)
-1. [以色列是面子的报复还是里子的攻击](https://so.toutiao.com/search?keyword=以色列是面子的报复还是里子的攻击)
 1. [肯尼亚国防军司令坠机身亡](https://so.toutiao.com/search?keyword=肯尼亚国防军司令坠机身亡)
 1. [菲律宾要中国反思 外交部驳斥](https://so.toutiao.com/search?keyword=菲律宾要中国反思+外交部驳斥)
 1. [公安部打击非法制售“特供酒”](https://so.toutiao.com/search?keyword=公安部打击非法制售“特供酒”)
-1. [越野车驶入麦田来回碾压](https://so.toutiao.com/search?keyword=越野车驶入麦田来回碾压)
 1. [遇刺牺牲民警武霖遗体告别仪式举行](https://so.toutiao.com/search?keyword=遇刺牺牲民警武霖遗体告别仪式举行)
 1. [“特供”酒每瓶成本40元卖2000元](https://so.toutiao.com/search?keyword=“特供”酒每瓶成本40元卖2000元)
 1. [男子欠屠宰场40万成员工打工还债](https://so.toutiao.com/search?keyword=男子欠屠宰场40万成员工打工还债)
@@ -74,9 +85,6 @@
 1. [鄂尔多斯警方抓获38名卖淫嫖娼者](https://so.toutiao.com/search?keyword=鄂尔多斯警方抓获38名卖淫嫖娼者)
 1. [吴亦凡两家公司欠税427万被公告](https://so.toutiao.com/search?keyword=吴亦凡两家公司欠税427万被公告)
 1. [湘潭大学回应网传学生偷外卖被毒死](https://so.toutiao.com/search?keyword=湘潭大学回应网传学生偷外卖被毒死)
-1. [南京市民吐槽换燃气表后燃气费翻倍](https://so.toutiao.com/search?keyword=南京市民吐槽换燃气表后燃气费翻倍)
-1. [女子停车堵路警察劝离无果](https://so.toutiao.com/search?keyword=女子停车堵路警察劝离无果)
-1. [周深在联合国总部献唱](https://so.toutiao.com/search?keyword=周深在联合国总部献唱)
 1. [核设施遭袭 俄乌无人机大战升级](https://so.toutiao.com/search?keyword=核设施遭袭+俄乌无人机大战升级)
 1. [女老师教导小学生烟卡危害](https://so.toutiao.com/search?keyword=女老师教导小学生烟卡危害)
 1. [美国男子回国后收到巨额流量账单](https://so.toutiao.com/search?keyword=美国男子回国后收到巨额流量账单)
@@ -85,10 +93,7 @@
 1. [吉利已申请极氪009光辉商标](https://so.toutiao.com/search?keyword=吉利已申请极氪009光辉商标)
 1. [周鸿祎被车企大佬宠到眼花缭乱](https://so.toutiao.com/search?keyword=周鸿祎被车企大佬宠到眼花缭乱)
 1. [以色列一工人遭滚动钢卷碾压身亡](https://so.toutiao.com/search?keyword=以色列一工人遭滚动钢卷碾压身亡)
-1. [特斯拉能重振市场信心吗](https://so.toutiao.com/search?keyword=特斯拉能重振市场信心吗)
 1. [济南一小学还保留平房教室](https://so.toutiao.com/search?keyword=济南一小学还保留平房教室)
-1. [阿姨想用中铺换下铺 全程礼貌询问](https://so.toutiao.com/search?keyword=阿姨想用中铺换下铺+全程礼貌询问)
-1. [大妈摆摊遇城管 直接将饼发给路人](https://so.toutiao.com/search?keyword=大妈摆摊遇城管+直接将饼发给路人)
 1. [男生被同学反锁宿舍群殴](https://so.toutiao.com/search?keyword=男生被同学反锁宿舍群殴)
 1. [全红婵注意力全在吉祥物上](https://so.toutiao.com/search?keyword=全红婵注意力全在吉祥物上)
 1. [商家隔栅栏免费投喂学生 校方回应](https://so.toutiao.com/search?keyword=商家隔栅栏免费投喂学生+校方回应)
@@ -99,6 +104,5 @@
 1. [高铁站列车长引导乘客被大雨淋透](https://so.toutiao.com/search?keyword=高铁站列车长引导乘客被大雨淋透)
 1. [辅警盗刷在押嫌疑人23.5万](https://so.toutiao.com/search?keyword=辅警盗刷在押嫌疑人23.5万)
 1. [女子去拿热水壶 老公察觉立马弹起](https://so.toutiao.com/search?keyword=女子去拿热水壶+老公察觉立马弹起)
-1. [国内液化天然气价格集中上涨](https://so.toutiao.com/search?keyword=国内液化天然气价格集中上涨)
 1. [巴以问题上美国为何屡次投下反对票](https://so.toutiao.com/search?keyword=巴以问题上美国为何屡次投下反对票)
 <!-- END TOUTIAO -->
