--- a/archives/toutiao-search/2024-04-20.md
+++ b/archives/toutiao-search/2024-04-20.md
@@ -1,54 +1,74 @@
 # 2024-04-20
 
-共 114 条
+共 129 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 20 2024 08:25:16 GMT+0800 (China Standard Time) -->
-1. [警方通报河北两车相撞致8死1伤](https://so.toutiao.com/search?keyword=警方通报河北两车相撞致8死1伤)
-1. [以色列开始反击伊朗 地点有何讲究](https://so.toutiao.com/search?keyword=以色列开始反击伊朗+地点有何讲究)
+<!-- 最后更新时间 Sat Apr 20 2024 09:39:40 GMT+0800 (China Standard Time) -->
+1. [以色列伊朗开启低烈度暴力循环](https://so.toutiao.com/search?keyword=以色列伊朗开启低烈度暴力循环)
+1. [狗妈妈路上巧遇孩子激动不已](https://so.toutiao.com/search?keyword=狗妈妈路上巧遇孩子激动不已)
 1. [2024春天田野里的新故事](https://so.toutiao.com/search?keyword=2024春天田野里的新故事)
-1. [纪委工作人员酒驾被查？官方通报](https://so.toutiao.com/search?keyword=纪委工作人员酒驾被查？官方通报)
-1. [毕毅任解放军信息支援部队司令员](https://so.toutiao.com/search?keyword=毕毅任解放军信息支援部队司令员)
+1. [警方通报河北两车相撞致8死1伤](https://so.toutiao.com/search?keyword=警方通报河北两车相撞致8死1伤)
+1. [全红婵夺金后看到家人在现场很震惊](https://so.toutiao.com/search?keyword=全红婵夺金后看到家人在现场很震惊)
 1. [中国国奥2连败出局无缘前往巴黎](https://so.toutiao.com/search?keyword=中国国奥2连败出局无缘前往巴黎)
-1. [在伊朗中国留学生谈以色列空袭伊朗](https://so.toutiao.com/search?keyword=在伊朗中国留学生谈以色列空袭伊朗)
-1. [解放军信息支援部队成立](https://so.toutiao.com/search?keyword=解放军信息支援部队成立)
-1. [男子开宝马撞人致6死 被执行死刑](https://so.toutiao.com/search?keyword=男子开宝马撞人致6死+被执行死刑)
-1. [以导弹击中伊朗境内目标画面曝光](https://so.toutiao.com/search?keyword=以导弹击中伊朗境内目标画面曝光)
+1. [毕毅任解放军信息支援部队司令员](https://so.toutiao.com/search?keyword=毕毅任解放军信息支援部队司令员)
+1. [浙江男篮击败上海队](https://so.toutiao.com/search?keyword=浙江男篮击败上海队)
+1. [媒体人：周冠宇不太可能成为巨星](https://so.toutiao.com/search?keyword=媒体人：周冠宇不太可能成为巨星)
+1. [纪委工作人员酒驾被查？官方通报](https://so.toutiao.com/search?keyword=纪委工作人员酒驾被查？官方通报)
 1. [重庆通报燃气费多计多收问题](https://so.toutiao.com/search?keyword=重庆通报燃气费多计多收问题)
 1. [老人下跪求饶 旁边人为何拉着城管](https://so.toutiao.com/search?keyword=老人下跪求饶+旁边人为何拉着城管)
-1. [哈尔滨啤酒检出的呕吐毒素是什么](https://so.toutiao.com/search?keyword=哈尔滨啤酒检出的呕吐毒素是什么)
+1. [高圆圆赞胡歌是一个非常好的人](https://so.toutiao.com/search?keyword=高圆圆赞胡歌是一个非常好的人)
 1. [官方辟谣“单次住院不能超过15天”](https://so.toutiao.com/search?keyword=官方辟谣“单次住院不能超过15天”)
-1. [燃气费1.5万女子：无奈交费恢复用气](https://so.toutiao.com/search?keyword=燃气费1.5万女子：无奈交费恢复用气)
-1. [多国驻联合国代表在以方发言前离席](https://so.toutiao.com/search?keyword=多国驻联合国代表在以方发言前离席)
-1. [男子地摊吃饭要求开发票还少给钱](https://so.toutiao.com/search?keyword=男子地摊吃饭要求开发票还少给钱)
+1. [印度大选首日部分投票站发生骚乱](https://so.toutiao.com/search?keyword=印度大选首日部分投票站发生骚乱)
+1. [25岁女子被丈夫割喉杀害后的340天](https://so.toutiao.com/search?keyword=25岁女子被丈夫割喉杀害后的340天)
+1. [解放军信息支援部队成立](https://so.toutiao.com/search?keyword=解放军信息支援部队成立)
+1. [男子开宝马撞人致6死 被执行死刑](https://so.toutiao.com/search?keyword=男子开宝马撞人致6死+被执行死刑)
+1. [直击潍坊国际风筝会](https://so.toutiao.com/search?keyword=直击潍坊国际风筝会)
+1. [在伊朗中国留学生谈以色列空袭伊朗](https://so.toutiao.com/search?keyword=在伊朗中国留学生谈以色列空袭伊朗)
+1. [女子停车堵路警察劝离无果](https://so.toutiao.com/search?keyword=女子停车堵路警察劝离无果)
+1. [摩根士丹利：理想L6未带来惊喜](https://so.toutiao.com/search?keyword=摩根士丹利：理想L6未带来惊喜)
+1. [重庆：全面加强燃气行业服务管理](https://so.toutiao.com/search?keyword=重庆：全面加强燃气行业服务管理)
 1. [极氪009光辉版正式上市](https://so.toutiao.com/search?keyword=极氪009光辉版正式上市)
-1. [专家：美又一次站在国际社会对立面](https://so.toutiao.com/search?keyword=专家：美又一次站在国际社会对立面)
 1. [三部门要求商家储备现金意味着什么](https://so.toutiao.com/search?keyword=三部门要求商家储备现金意味着什么)
+1. [日元汇率跌至34年来低位](https://so.toutiao.com/search?keyword=日元汇率跌至34年来低位)
+1. [《奔跑吧》刘涛灵魂拷问沙溢](https://so.toutiao.com/search?keyword=《奔跑吧》刘涛灵魂拷问沙溢)
+1. [詹姆斯浓眉G1大概率出战](https://so.toutiao.com/search?keyword=詹姆斯浓眉G1大概率出战)
+1. [哈尔滨啤酒检出的呕吐毒素是什么](https://so.toutiao.com/search?keyword=哈尔滨啤酒检出的呕吐毒素是什么)
+1. [以色列开始反击伊朗 地点有何讲究](https://so.toutiao.com/search?keyword=以色列开始反击伊朗+地点有何讲究)
+1. [媒体：这条航线为何能让台当局跳脚](https://so.toutiao.com/search?keyword=媒体：这条航线为何能让台当局跳脚)
+1. [大妈摆摊遇城管 直接将饼发给路人](https://so.toutiao.com/search?keyword=大妈摆摊遇城管+直接将饼发给路人)
+1. [越野车驶入麦田来回碾压](https://so.toutiao.com/search?keyword=越野车驶入麦田来回碾压)
+1. [《奔跑吧》白鹿范丞丞同款眼神杀](https://so.toutiao.com/search?keyword=《奔跑吧》白鹿范丞丞同款眼神杀)
+1. [邱毅嘲讽朱立伦开出访问大陆条件](https://so.toutiao.com/search?keyword=邱毅嘲讽朱立伦开出访问大陆条件)
+1. [专家：日本加息对日本股市影响有限](https://so.toutiao.com/search?keyword=专家：日本加息对日本股市影响有限)
+1. [外媒：美方证实以色列导弹击中伊朗](https://so.toutiao.com/search?keyword=外媒：美方证实以色列导弹击中伊朗)
+1. [男子地摊吃饭要求开发票还少给钱](https://so.toutiao.com/search?keyword=男子地摊吃饭要求开发票还少给钱)
+1. [朝鲜进行战略巡航导弹威力试验](https://so.toutiao.com/search?keyword=朝鲜进行战略巡航导弹威力试验)
+1. [官方否认骚扰女孩男子是镇书记儿子](https://so.toutiao.com/search?keyword=官方否认骚扰女孩男子是镇书记儿子)
+1. [阿姨想用中铺换下铺 全程礼貌询问](https://so.toutiao.com/search?keyword=阿姨想用中铺换下铺+全程礼貌询问)
+1. [成耀东：对韩日强队精神层面没有输](https://so.toutiao.com/search?keyword=成耀东：对韩日强队精神层面没有输)
+1. [以导弹击中伊朗境内目标画面曝光](https://so.toutiao.com/search?keyword=以导弹击中伊朗境内目标画面曝光)
+1. [多国驻联合国代表在以方发言前离席](https://so.toutiao.com/search?keyword=多国驻联合国代表在以方发言前离席)
+1. [伏季休渔期临近有人花2700元买海鲜](https://so.toutiao.com/search?keyword=伏季休渔期临近有人花2700元买海鲜)
+1. [以色列是面子的报复还是里子的攻击](https://so.toutiao.com/search?keyword=以色列是面子的报复还是里子的攻击)
+1. [儿子打工十几年没回家 老人急寻](https://so.toutiao.com/search?keyword=儿子打工十几年没回家+老人急寻)
+1. [周鸿祎：在给哪吒汽车提供咨询帮助](https://so.toutiao.com/search?keyword=周鸿祎：在给哪吒汽车提供咨询帮助)
+1. [周深在联合国总部献唱](https://so.toutiao.com/search?keyword=周深在联合国总部献唱)
+1. [曝特斯拉中国有部门裁员50%](https://so.toutiao.com/search?keyword=曝特斯拉中国有部门裁员50%)
+1. [燃气费1.5万女子：无奈交费恢复用气](https://so.toutiao.com/search?keyword=燃气费1.5万女子：无奈交费恢复用气)
+1. [专家：美又一次站在国际社会对立面](https://so.toutiao.com/search?keyword=专家：美又一次站在国际社会对立面)
 1. [伊朗：已告知美国 不寻求事态升级](https://so.toutiao.com/search?keyword=伊朗：已告知美国+不寻求事态升级)
 1. [信息支援部队是全新打造的战略性兵种](https://so.toutiao.com/search?keyword=信息支援部队是全新打造的战略性兵种)
 1. [U23亚洲杯同分排名规则解读](https://so.toutiao.com/search?keyword=U23亚洲杯同分排名规则解读)
-1. [女子停车堵路警察劝离无果](https://so.toutiao.com/search?keyword=女子停车堵路警察劝离无果)
 1. [解放军形成新型军兵种结构布局](https://so.toutiao.com/search?keyword=解放军形成新型军兵种结构布局)
-1. [伏季休渔期临近有人花2700元买海鲜](https://so.toutiao.com/search?keyword=伏季休渔期临近有人花2700元买海鲜)
 1. [麒麟9010跑分出炉](https://so.toutiao.com/search?keyword=麒麟9010跑分出炉)
 1. [女生跳桥轻生 路人发现后立即呼救](https://so.toutiao.com/search?keyword=女生跳桥轻生+路人发现后立即呼救)
-1. [25岁女子被丈夫割喉杀害后的340天](https://so.toutiao.com/search?keyword=25岁女子被丈夫割喉杀害后的340天)
 1. [南京市民吐槽换燃气表后燃气费翻倍](https://so.toutiao.com/search?keyword=南京市民吐槽换燃气表后燃气费翻倍)
-1. [日元汇率跌至34年来低位](https://so.toutiao.com/search?keyword=日元汇率跌至34年来低位)
 1. [警方再通报男子骚扰女孩还打家长](https://so.toutiao.com/search?keyword=警方再通报男子骚扰女孩还打家长)
-1. [邱毅嘲讽朱立伦开出访问大陆条件](https://so.toutiao.com/search?keyword=邱毅嘲讽朱立伦开出访问大陆条件)
-1. [外媒：美方证实以色列导弹击中伊朗](https://so.toutiao.com/search?keyword=外媒：美方证实以色列导弹击中伊朗)
 1. [阿根廷正式申请加入北约全球伙伴](https://so.toutiao.com/search?keyword=阿根廷正式申请加入北约全球伙伴)
-1. [越野车驶入麦田来回碾压](https://so.toutiao.com/search?keyword=越野车驶入麦田来回碾压)
 1. [男生被同学反锁宿舍群殴](https://so.toutiao.com/search?keyword=男生被同学反锁宿舍群殴)
 1. [女老师教导小学生烟卡危害](https://so.toutiao.com/search?keyword=女老师教导小学生烟卡危害)
 1. [周鸿祎被车企大佬宠到眼花缭乱](https://so.toutiao.com/search?keyword=周鸿祎被车企大佬宠到眼花缭乱)
-1. [周深在联合国总部献唱](https://so.toutiao.com/search?keyword=周深在联合国总部献唱)
-1. [曝特斯拉中国有部门裁员50%](https://so.toutiao.com/search?keyword=曝特斯拉中国有部门裁员50%)
-1. [周鸿祎：在给哪吒汽车提供咨询帮助](https://so.toutiao.com/search?keyword=周鸿祎：在给哪吒汽车提供咨询帮助)
-1. [媒体：这条航线为何能让台当局跳脚](https://so.toutiao.com/search?keyword=媒体：这条航线为何能让台当局跳脚)
 1. [智障男子被当劫犯关9年 再审改判无罪](https://so.toutiao.com/search?keyword=智障男子被当劫犯关9年+再审改判无罪)
-1. [摩根士丹利：理想L6未带来惊喜](https://so.toutiao.com/search?keyword=摩根士丹利：理想L6未带来惊喜)
 1. [律师解读老人向城管下跪事件](https://so.toutiao.com/search?keyword=律师解读老人向城管下跪事件)
 1. [抗战烈士墓中发现年轻女子照片](https://so.toutiao.com/search?keyword=抗战烈士墓中发现年轻女子照片)
 1. [机构：华为Pura70今年出货或超千万部](https://so.toutiao.com/search?keyword=机构：华为Pura70今年出货或超千万部)
@@ -59,18 +79,13 @@
 1. [媒体评打人男子叫嚣是镇书记儿子](https://so.toutiao.com/search?keyword=媒体评打人男子叫嚣是镇书记儿子)
 1. [湘潭大学身亡学生的同学老师发声](https://so.toutiao.com/search?keyword=湘潭大学身亡学生的同学老师发声)
 1. [俄媒：伊朗找到攻破以色列防御办法](https://so.toutiao.com/search?keyword=俄媒：伊朗找到攻破以色列防御办法)
-1. [大妈摆摊遇城管 直接将饼发给路人](https://so.toutiao.com/search?keyword=大妈摆摊遇城管+直接将饼发给路人)
 1. [美媒：以色列已成内部分裂的国家](https://so.toutiao.com/search?keyword=美媒：以色列已成内部分裂的国家)
-1. [阿姨想用中铺换下铺 全程礼貌询问](https://so.toutiao.com/search?keyword=阿姨想用中铺换下铺+全程礼貌询问)
-1. [官方否认骚扰女孩男子是镇书记儿子](https://so.toutiao.com/search?keyword=官方否认骚扰女孩男子是镇书记儿子)
 1. [专家：伊以恐陷入没有尽头的报复螺旋](https://so.toutiao.com/search?keyword=专家：伊以恐陷入没有尽头的报复螺旋)
 1. [张耀夸杨紫可爱又阳光](https://so.toutiao.com/search?keyword=张耀夸杨紫可爱又阳光)
 1. [吉利已申请极氪009光辉商标](https://so.toutiao.com/search?keyword=吉利已申请极氪009光辉商标)
 1. [脑瘫学生超国家线100多分考研上岸](https://so.toutiao.com/search?keyword=脑瘫学生超国家线100多分考研上岸)
 1. [男子割喉杀妻一审被判处死缓](https://so.toutiao.com/search?keyword=男子割喉杀妻一审被判处死缓)
 1. [伊朗革命卫队所有基地最高级别战备](https://so.toutiao.com/search?keyword=伊朗革命卫队所有基地最高级别战备)
-1. [儿子打工十几年没回家 老人急寻](https://so.toutiao.com/search?keyword=儿子打工十几年没回家+老人急寻)
-1. [以色列是面子的报复还是里子的攻击](https://so.toutiao.com/search?keyword=以色列是面子的报复还是里子的攻击)
 1. [古特雷斯呼吁停止中东“报复循环”](https://so.toutiao.com/search?keyword=古特雷斯呼吁停止中东“报复循环”)
 1. [余承东称智界S7将有Pura70同款配色](https://so.toutiao.com/search?keyword=余承东称智界S7将有Pura70同款配色)
 1. [浙江宁波发现近危级珍稀植物水晶兰](https://so.toutiao.com/search?keyword=浙江宁波发现近危级珍稀植物水晶兰)
