--- a/archives/toutiao-search/2024-04-20.md
+++ b/archives/toutiao-search/2024-04-20.md
@@ -1,59 +1,74 @@
 # 2024-04-20
 
-共 143 条
+共 156 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 20 2024 10:14:04 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 20 2024 11:00:56 GMT+0800 (China Standard Time) -->
 1. [以色列伊朗开启低烈度暴力循环](https://so.toutiao.com/search?keyword=以色列伊朗开启低烈度暴力循环)
-1. [狗妈妈路上巧遇孩子激动不已](https://so.toutiao.com/search?keyword=狗妈妈路上巧遇孩子激动不已)
-1. [2024春天田野里的新故事](https://so.toutiao.com/search?keyword=2024春天田野里的新故事)
 1. [全红婵夺金后看到家人在现场很震惊](https://so.toutiao.com/search?keyword=全红婵夺金后看到家人在现场很震惊)
+1. [广交会涌现外贸新动能](https://so.toutiao.com/search?keyword=广交会涌现外贸新动能)
+1. [巴巴多斯宣布正式承认巴勒斯坦国](https://so.toutiao.com/search?keyword=巴巴多斯宣布正式承认巴勒斯坦国)
+1. [狗妈妈路上巧遇孩子激动不已](https://so.toutiao.com/search?keyword=狗妈妈路上巧遇孩子激动不已)
 1. [中国国奥2连败出局无缘前往巴黎](https://so.toutiao.com/search?keyword=中国国奥2连败出局无缘前往巴黎)
-1. [男生被同学反锁宿舍群殴 4人被刑拘](https://so.toutiao.com/search?keyword=男生被同学反锁宿舍群殴+4人被刑拘)
-1. [男子不顾阻拦从医院5楼跳下](https://so.toutiao.com/search?keyword=男子不顾阻拦从医院5楼跳下)
+1. [氯雷他定能长期服用吗](https://so.toutiao.com/search?keyword=氯雷他定能长期服用吗)
+1. [大陆调整航线触动台当局敏感神经](https://so.toutiao.com/search?keyword=大陆调整航线触动台当局敏感神经)
 1. [毕毅任解放军信息支援部队司令员](https://so.toutiao.com/search?keyword=毕毅任解放军信息支援部队司令员)
-1. [在伊朗中国留学生谈以色列空袭伊朗](https://so.toutiao.com/search?keyword=在伊朗中国留学生谈以色列空袭伊朗)
 1. [邱毅嘲讽朱立伦开出访问大陆条件](https://so.toutiao.com/search?keyword=邱毅嘲讽朱立伦开出访问大陆条件)
 1. [警方通报河北两车相撞致8死1伤](https://so.toutiao.com/search?keyword=警方通报河北两车相撞致8死1伤)
 1. [重庆通报燃气费多计多收问题](https://so.toutiao.com/search?keyword=重庆通报燃气费多计多收问题)
 1. [老人下跪求饶 旁边人为何拉着城管](https://so.toutiao.com/search?keyword=老人下跪求饶+旁边人为何拉着城管)
-1. [官方辟谣“单次住院不能超过15天”](https://so.toutiao.com/search?keyword=官方辟谣“单次住院不能超过15天”)
+1. [养老保险断缴即清零？官方辟谣](https://so.toutiao.com/search?keyword=养老保险断缴即清零？官方辟谣)
 1. [高圆圆赞胡歌是一个非常好的人](https://so.toutiao.com/search?keyword=高圆圆赞胡歌是一个非常好的人)
-1. [以高官暗示以色列是伊朗爆炸主谋](https://so.toutiao.com/search?keyword=以高官暗示以色列是伊朗爆炸主谋)
 1. [解放军信息支援部队成立](https://so.toutiao.com/search?keyword=解放军信息支援部队成立)
+1. [英伟达重挫10%](https://so.toutiao.com/search?keyword=英伟达重挫10%)
 1. [一年级男孩挑战和各国朋友换外币](https://so.toutiao.com/search?keyword=一年级男孩挑战和各国朋友换外币)
-1. [媒体：这条航线为何能让台当局跳脚](https://so.toutiao.com/search?keyword=媒体：这条航线为何能让台当局跳脚)
-1. [重庆：全面加强燃气行业服务管理](https://so.toutiao.com/search?keyword=重庆：全面加强燃气行业服务管理)
-1. [25岁女子被丈夫割喉杀害后的340天](https://so.toutiao.com/search?keyword=25岁女子被丈夫割喉杀害后的340天)
-1. [周冠宇：希望更多人了解并喜欢赛车](https://so.toutiao.com/search?keyword=周冠宇：希望更多人了解并喜欢赛车)
-1. [纪委工作人员酒驾被查？官方通报](https://so.toutiao.com/search?keyword=纪委工作人员酒驾被查？官方通报)
-1. [大陆调整航线触动台当局敏感神经](https://so.toutiao.com/search?keyword=大陆调整航线触动台当局敏感神经)
-1. [摩根士丹利：理想L6未带来惊喜](https://so.toutiao.com/search?keyword=摩根士丹利：理想L6未带来惊喜)
-1. [女子停车堵路警察劝离无果](https://so.toutiao.com/search?keyword=女子停车堵路警察劝离无果)
-1. [越野车驶入麦田来回碾压](https://so.toutiao.com/search?keyword=越野车驶入麦田来回碾压)
 1. [哈尔滨啤酒检出的呕吐毒素是什么](https://so.toutiao.com/search?keyword=哈尔滨啤酒检出的呕吐毒素是什么)
-1. [《奔跑吧》刘涛灵魂拷问沙溢](https://so.toutiao.com/search?keyword=《奔跑吧》刘涛灵魂拷问沙溢)
+1. [以高官暗示以色列是伊朗爆炸主谋](https://so.toutiao.com/search?keyword=以高官暗示以色列是伊朗爆炸主谋)
+1. [港会财局调查普华永道审计恒大失败](https://so.toutiao.com/search?keyword=港会财局调查普华永道审计恒大失败)
+1. [越野车驶入麦田来回碾压](https://so.toutiao.com/search?keyword=越野车驶入麦田来回碾压)
 1. [以色列开始反击伊朗 地点有何讲究](https://so.toutiao.com/search?keyword=以色列开始反击伊朗+地点有何讲究)
-1. [大妈摆摊遇城管 直接将饼发给路人](https://so.toutiao.com/search?keyword=大妈摆摊遇城管+直接将饼发给路人)
-1. [媒体人：周冠宇不太可能成为巨星](https://so.toutiao.com/search?keyword=媒体人：周冠宇不太可能成为巨星)
+1. [民进党对傅崐萁访陆说三道四遭批](https://so.toutiao.com/search?keyword=民进党对傅崐萁访陆说三道四遭批)
+1. [25岁女子被丈夫割喉杀害后的340天](https://so.toutiao.com/search?keyword=25岁女子被丈夫割喉杀害后的340天)
+1. [银价涨幅已超过金价](https://so.toutiao.com/search?keyword=银价涨幅已超过金价)
+1. [在伊朗中国留学生谈以色列空袭伊朗](https://so.toutiao.com/search?keyword=在伊朗中国留学生谈以色列空袭伊朗)
 1. [关晓彤连续7年为鹿晗庆生](https://so.toutiao.com/search?keyword=关晓彤连续7年为鹿晗庆生)
-1. [皮尔斯：掘金仍是湖人爸爸](https://so.toutiao.com/search?keyword=皮尔斯：掘金仍是湖人爸爸)
-1. [三部门要求商家储备现金意味着什么](https://so.toutiao.com/search?keyword=三部门要求商家储备现金意味着什么)
+1. [纪委工作人员酒驾被查？官方通报](https://so.toutiao.com/search?keyword=纪委工作人员酒驾被查？官方通报)
+1. [主持人：人均存款11万为何感受不到](https://so.toutiao.com/search?keyword=主持人：人均存款11万为何感受不到)
+1. [老詹：没太多时间打我热爱的比赛了](https://so.toutiao.com/search?keyword=老詹：没太多时间打我热爱的比赛了)
+1. [大妈摆摊遇城管 直接将饼发给路人](https://so.toutiao.com/search?keyword=大妈摆摊遇城管+直接将饼发给路人)
 1. [极氪009光辉版正式上市](https://so.toutiao.com/search?keyword=极氪009光辉版正式上市)
-1. [氯雷他定能长期服用吗](https://so.toutiao.com/search?keyword=氯雷他定能长期服用吗)
-1. [男子地摊吃饭要求开发票还少给钱](https://so.toutiao.com/search?keyword=男子地摊吃饭要求开发票还少给钱)
 1. [儿子打工十几年没回家 老人急寻](https://so.toutiao.com/search?keyword=儿子打工十几年没回家+老人急寻)
 1. [官方否认骚扰女孩男子是镇书记儿子](https://so.toutiao.com/search?keyword=官方否认骚扰女孩男子是镇书记儿子)
-1. [阿姨想用中铺换下铺 全程礼貌询问](https://so.toutiao.com/search?keyword=阿姨想用中铺换下铺+全程礼貌询问)
+1. [周鸿祎公布6条选车标准](https://so.toutiao.com/search?keyword=周鸿祎公布6条选车标准)
 1. [哈马斯称以“侵略”伊朗升级局势](https://so.toutiao.com/search?keyword=哈马斯称以“侵略”伊朗升级局势)
+1. [西媒：纳乔拟下一站前往沙特或美国](https://so.toutiao.com/search?keyword=西媒：纳乔拟下一站前往沙特或美国)
+1. [男子地摊吃饭要求开发票还少给钱](https://so.toutiao.com/search?keyword=男子地摊吃饭要求开发票还少给钱)
+1. [以色列是面子的报复还是里子的攻击](https://so.toutiao.com/search?keyword=以色列是面子的报复还是里子的攻击)
+1. [证监会全力支持科技企业高水平发展](https://so.toutiao.com/search?keyword=证监会全力支持科技企业高水平发展)
+1. [媒体：这条航线为何能让台当局跳脚](https://so.toutiao.com/search?keyword=媒体：这条航线为何能让台当局跳脚)
+1. [乘风2024初舞台排名前十揭晓](https://so.toutiao.com/search?keyword=乘风2024初舞台排名前十揭晓)
+1. [摩根士丹利：理想L6未带来惊喜](https://so.toutiao.com/search?keyword=摩根士丹利：理想L6未带来惊喜)
+1. [曝特斯拉中国有部门裁员50%](https://so.toutiao.com/search?keyword=曝特斯拉中国有部门裁员50%)
+1. [山东化工厂爆炸致10死 5人被追责](https://so.toutiao.com/search?keyword=山东化工厂爆炸致10死+5人被追责)
+1. [美空军演习一次性出动12架B-2](https://so.toutiao.com/search?keyword=美空军演习一次性出动12架B-2)
+1. [《奔跑吧》刘涛灵魂拷问沙溢](https://so.toutiao.com/search?keyword=《奔跑吧》刘涛灵魂拷问沙溢)
+1. [媒体人：周冠宇不太可能成为巨星](https://so.toutiao.com/search?keyword=媒体人：周冠宇不太可能成为巨星)
+1. [证监会新规每年为投资者省200亿元](https://so.toutiao.com/search?keyword=证监会新规每年为投资者省200亿元)
+1. [2024春天田野里的新故事](https://so.toutiao.com/search?keyword=2024春天田野里的新故事)
+1. [男生被同学反锁宿舍群殴 4人被刑拘](https://so.toutiao.com/search?keyword=男生被同学反锁宿舍群殴+4人被刑拘)
+1. [男子不顾阻拦从医院5楼跳下](https://so.toutiao.com/search?keyword=男子不顾阻拦从医院5楼跳下)
+1. [官方辟谣“单次住院不能超过15天”](https://so.toutiao.com/search?keyword=官方辟谣“单次住院不能超过15天”)
+1. [重庆：全面加强燃气行业服务管理](https://so.toutiao.com/search?keyword=重庆：全面加强燃气行业服务管理)
+1. [周冠宇：希望更多人了解并喜欢赛车](https://so.toutiao.com/search?keyword=周冠宇：希望更多人了解并喜欢赛车)
+1. [女子停车堵路警察劝离无果](https://so.toutiao.com/search?keyword=女子停车堵路警察劝离无果)
+1. [皮尔斯：掘金仍是湖人爸爸](https://so.toutiao.com/search?keyword=皮尔斯：掘金仍是湖人爸爸)
+1. [三部门要求商家储备现金意味着什么](https://so.toutiao.com/search?keyword=三部门要求商家储备现金意味着什么)
+1. [阿姨想用中铺换下铺 全程礼貌询问](https://so.toutiao.com/search?keyword=阿姨想用中铺换下铺+全程礼貌询问)
 1. [周深在联合国总部献唱](https://so.toutiao.com/search?keyword=周深在联合国总部献唱)
 1. [专家：日本加息对日本股市影响有限](https://so.toutiao.com/search?keyword=专家：日本加息对日本股市影响有限)
-1. [主持人：人均存款11万为何感受不到](https://so.toutiao.com/search?keyword=主持人：人均存款11万为何感受不到)
 1. [伊拉克巴比伦省一军事基地发生爆炸](https://so.toutiao.com/search?keyword=伊拉克巴比伦省一军事基地发生爆炸)
 1. [解放军形成新型军兵种结构布局](https://so.toutiao.com/search?keyword=解放军形成新型军兵种结构布局)
-1. [巴巴多斯宣布正式承认巴勒斯坦国](https://so.toutiao.com/search?keyword=巴巴多斯宣布正式承认巴勒斯坦国)
 1. [曝伊拉克2处军事基地遭袭](https://so.toutiao.com/search?keyword=曝伊拉克2处军事基地遭袭)
-1. [曝特斯拉中国有部门裁员50%](https://so.toutiao.com/search?keyword=曝特斯拉中国有部门裁员50%)
 1. [浙江男篮击败上海队](https://so.toutiao.com/search?keyword=浙江男篮击败上海队)
 1. [印度大选首日部分投票站发生骚乱](https://so.toutiao.com/search?keyword=印度大选首日部分投票站发生骚乱)
 1. [男子开宝马撞人致6死 被执行死刑](https://so.toutiao.com/search?keyword=男子开宝马撞人致6死+被执行死刑)
@@ -67,7 +82,6 @@
 1. [以导弹击中伊朗境内目标画面曝光](https://so.toutiao.com/search?keyword=以导弹击中伊朗境内目标画面曝光)
 1. [多国驻联合国代表在以方发言前离席](https://so.toutiao.com/search?keyword=多国驻联合国代表在以方发言前离席)
 1. [伏季休渔期临近有人花2700元买海鲜](https://so.toutiao.com/search?keyword=伏季休渔期临近有人花2700元买海鲜)
-1. [以色列是面子的报复还是里子的攻击](https://so.toutiao.com/search?keyword=以色列是面子的报复还是里子的攻击)
 1. [周鸿祎：在给哪吒汽车提供咨询帮助](https://so.toutiao.com/search?keyword=周鸿祎：在给哪吒汽车提供咨询帮助)
 1. [燃气费1.5万女子：无奈交费恢复用气](https://so.toutiao.com/search?keyword=燃气费1.5万女子：无奈交费恢复用气)
 1. [专家：美又一次站在国际社会对立面](https://so.toutiao.com/search?keyword=专家：美又一次站在国际社会对立面)
@@ -110,7 +124,6 @@
 1. [伊朗媒体：伊朗核设施未受损](https://so.toutiao.com/search?keyword=伊朗媒体：伊朗核设施未受损)
 1. [第一批小米SU7车主已经快赚回本了](https://so.toutiao.com/search?keyword=第一批小米SU7车主已经快赚回本了)
 1. [实测华为Pura70系列游戏能力](https://so.toutiao.com/search?keyword=实测华为Pura70系列游戏能力)
-1. [证监会新规每年为投资者省200亿元](https://so.toutiao.com/search?keyword=证监会新规每年为投资者省200亿元)
 1. [中信证券回应处罚事先告知书](https://so.toutiao.com/search?keyword=中信证券回应处罚事先告知书)
 1. [中信证券收行政处罚事先告知书](https://so.toutiao.com/search?keyword=中信证券收行政处罚事先告知书)
 1. [伊朗等多地传出爆炸声](https://so.toutiao.com/search?keyword=伊朗等多地传出爆炸声)
