--- a/archives/toutiao-search/2024-04-20.md
+++ b/archives/toutiao-search/2024-04-20.md
@@ -1,57 +1,74 @@
 # 2024-04-20
 
-共 156 条
+共 173 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 20 2024 11:00:56 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 20 2024 12:00:37 GMT+0800 (China Standard Time) -->
 1. [以色列伊朗开启低烈度暴力循环](https://so.toutiao.com/search?keyword=以色列伊朗开启低烈度暴力循环)
-1. [全红婵夺金后看到家人在现场很震惊](https://so.toutiao.com/search?keyword=全红婵夺金后看到家人在现场很震惊)
-1. [广交会涌现外贸新动能](https://so.toutiao.com/search?keyword=广交会涌现外贸新动能)
 1. [巴巴多斯宣布正式承认巴勒斯坦国](https://so.toutiao.com/search?keyword=巴巴多斯宣布正式承认巴勒斯坦国)
-1. [狗妈妈路上巧遇孩子激动不已](https://so.toutiao.com/search?keyword=狗妈妈路上巧遇孩子激动不已)
-1. [中国国奥2连败出局无缘前往巴黎](https://so.toutiao.com/search?keyword=中国国奥2连败出局无缘前往巴黎)
-1. [氯雷他定能长期服用吗](https://so.toutiao.com/search?keyword=氯雷他定能长期服用吗)
-1. [大陆调整航线触动台当局敏感神经](https://so.toutiao.com/search?keyword=大陆调整航线触动台当局敏感神经)
-1. [毕毅任解放军信息支援部队司令员](https://so.toutiao.com/search?keyword=毕毅任解放军信息支援部队司令员)
-1. [邱毅嘲讽朱立伦开出访问大陆条件](https://so.toutiao.com/search?keyword=邱毅嘲讽朱立伦开出访问大陆条件)
-1. [警方通报河北两车相撞致8死1伤](https://so.toutiao.com/search?keyword=警方通报河北两车相撞致8死1伤)
-1. [重庆通报燃气费多计多收问题](https://so.toutiao.com/search?keyword=重庆通报燃气费多计多收问题)
-1. [老人下跪求饶 旁边人为何拉着城管](https://so.toutiao.com/search?keyword=老人下跪求饶+旁边人为何拉着城管)
-1. [养老保险断缴即清零？官方辟谣](https://so.toutiao.com/search?keyword=养老保险断缴即清零？官方辟谣)
-1. [高圆圆赞胡歌是一个非常好的人](https://so.toutiao.com/search?keyword=高圆圆赞胡歌是一个非常好的人)
-1. [解放军信息支援部队成立](https://so.toutiao.com/search?keyword=解放军信息支援部队成立)
+1. [广交会涌现外贸新动能](https://so.toutiao.com/search?keyword=广交会涌现外贸新动能)
+1. [全红婵夺金后看到家人在现场很震惊](https://so.toutiao.com/search?keyword=全红婵夺金后看到家人在现场很震惊)
+1. [加沙妇女抱5岁侄女尸体照片获摄影奖](https://so.toutiao.com/search?keyword=加沙妇女抱5岁侄女尸体照片获摄影奖)
 1. [英伟达重挫10%](https://so.toutiao.com/search?keyword=英伟达重挫10%)
-1. [一年级男孩挑战和各国朋友换外币](https://so.toutiao.com/search?keyword=一年级男孩挑战和各国朋友换外币)
+1. [狗妈妈路上巧遇孩子激动不已](https://so.toutiao.com/search?keyword=狗妈妈路上巧遇孩子激动不已)
+1. [央视发文：调休原则是最小干预](https://so.toutiao.com/search?keyword=央视发文：调休原则是最小干预)
+1. [新任海军新闻发言人冷国伟首次亮相](https://so.toutiao.com/search?keyword=新任海军新闻发言人冷国伟首次亮相)
+1. [中国国奥2连败出局无缘前往巴黎](https://so.toutiao.com/search?keyword=中国国奥2连败出局无缘前往巴黎)
+1. [警方通报河北两车相撞致8死1伤](https://so.toutiao.com/search?keyword=警方通报河北两车相撞致8死1伤)
+1. [老人下跪求饶 旁边人为何拉着城管](https://so.toutiao.com/search?keyword=老人下跪求饶+旁边人为何拉着城管)
+1. [周鸿祎公布6条选车标准](https://so.toutiao.com/search?keyword=周鸿祎公布6条选车标准)
+1. [养老保险断缴即清零？官方辟谣](https://so.toutiao.com/search?keyword=养老保险断缴即清零？官方辟谣)
+1. [关晓彤连续7年为鹿晗庆生](https://so.toutiao.com/search?keyword=关晓彤连续7年为鹿晗庆生)
+1. [男子发现女友卖淫后提供住宿求合伙](https://so.toutiao.com/search?keyword=男子发现女友卖淫后提供住宿求合伙)
+1. [邱毅嘲讽朱立伦开出访问大陆条件](https://so.toutiao.com/search?keyword=邱毅嘲讽朱立伦开出访问大陆条件)
+1. [华为Pura 70 Ultra可发送卫星图片](https://so.toutiao.com/search?keyword=华为Pura+70 Ultra可发送卫星图片)
+1. [重庆通报燃气费多计多收问题](https://so.toutiao.com/search?keyword=重庆通报燃气费多计多收问题)
+1. [价值12万的自行车上路被撞](https://so.toutiao.com/search?keyword=价值12万的自行车上路被撞)
+1. [毕毅任解放军信息支援部队司令员](https://so.toutiao.com/search?keyword=毕毅任解放军信息支援部队司令员)
+1. [主持人：人均存款11万为何感受不到](https://so.toutiao.com/search?keyword=主持人：人均存款11万为何感受不到)
+1. [约旦：不允许中东成为伊以冲突场所](https://so.toutiao.com/search?keyword=约旦：不允许中东成为伊以冲突场所)
+1. [氯雷他定能长期服用吗](https://so.toutiao.com/search?keyword=氯雷他定能长期服用吗)
+1. [解放军信息支援部队成立](https://so.toutiao.com/search?keyword=解放军信息支援部队成立)
+1. [银价涨幅已超过金价](https://so.toutiao.com/search?keyword=银价涨幅已超过金价)
+1. [25岁女子被丈夫割喉杀害后的340天](https://so.toutiao.com/search?keyword=25岁女子被丈夫割喉杀害后的340天)
+1. [上海地铁试点闸机常开门](https://so.toutiao.com/search?keyword=上海地铁试点闸机常开门)
+1. [女生遇一“坨”胖狗 体重180斤左右](https://so.toutiao.com/search?keyword=女生遇一“坨”胖狗+体重180斤左右)
 1. [哈尔滨啤酒检出的呕吐毒素是什么](https://so.toutiao.com/search?keyword=哈尔滨啤酒检出的呕吐毒素是什么)
+1. [高圆圆赞胡歌是一个非常好的人](https://so.toutiao.com/search?keyword=高圆圆赞胡歌是一个非常好的人)
+1. [官方否认骚扰女孩男子是镇书记儿子](https://so.toutiao.com/search?keyword=官方否认骚扰女孩男子是镇书记儿子)
+1. [多地小龙虾身价下跌](https://so.toutiao.com/search?keyword=多地小龙虾身价下跌)
+1. [曝以袭伊朗前曾告知美方 美不支持](https://so.toutiao.com/search?keyword=曝以袭伊朗前曾告知美方+美不支持)
+1. [大陆调整航线触动台当局敏感神经](https://so.toutiao.com/search?keyword=大陆调整航线触动台当局敏感神经)
+1. [纪委工作人员酒驾被查？官方通报](https://so.toutiao.com/search?keyword=纪委工作人员酒驾被查？官方通报)
+1. [成都一轿车疑似失控致1死](https://so.toutiao.com/search?keyword=成都一轿车疑似失控致1死)
+1. [大妈摆摊遇城管 直接将饼发给路人](https://so.toutiao.com/search?keyword=大妈摆摊遇城管+直接将饼发给路人)
+1. [男子地摊吃饭要求开发票还少给钱](https://so.toutiao.com/search?keyword=男子地摊吃饭要求开发票还少给钱)
+1. [山东化工厂爆炸致10死 5人被追责](https://so.toutiao.com/search?keyword=山东化工厂爆炸致10死+5人被追责)
+1. [厦门舰厦门见](https://so.toutiao.com/search?keyword=厦门舰厦门见)
+1. [曝特斯拉中国有部门裁员50%](https://so.toutiao.com/search?keyword=曝特斯拉中国有部门裁员50%)
+1. [儿子打工十几年没回家 老人急寻](https://so.toutiao.com/search?keyword=儿子打工十几年没回家+老人急寻)
+1. [伊朗军方：击落可疑飞行物致爆炸](https://so.toutiao.com/search?keyword=伊朗军方：击落可疑飞行物致爆炸)
+1. [《奔跑吧》刘涛灵魂拷问沙溢](https://so.toutiao.com/search?keyword=《奔跑吧》刘涛灵魂拷问沙溢)
+1. [山西：当一号旅游公路迎来古代诗人](https://so.toutiao.com/search?keyword=山西：当一号旅游公路迎来古代诗人)
+1. [黄金和美元为何同涨](https://so.toutiao.com/search?keyword=黄金和美元为何同涨)
+1. [原解放军总医院院长刘轩亭逝世](https://so.toutiao.com/search?keyword=原解放军总医院院长刘轩亭逝世)
+1. [极氪009光辉版正式上市](https://so.toutiao.com/search?keyword=极氪009光辉版正式上市)
+1. [越野车驶入麦田来回碾压](https://so.toutiao.com/search?keyword=越野车驶入麦田来回碾压)
+1. [一年级男孩挑战和各国朋友换外币](https://so.toutiao.com/search?keyword=一年级男孩挑战和各国朋友换外币)
 1. [以高官暗示以色列是伊朗爆炸主谋](https://so.toutiao.com/search?keyword=以高官暗示以色列是伊朗爆炸主谋)
 1. [港会财局调查普华永道审计恒大失败](https://so.toutiao.com/search?keyword=港会财局调查普华永道审计恒大失败)
-1. [越野车驶入麦田来回碾压](https://so.toutiao.com/search?keyword=越野车驶入麦田来回碾压)
 1. [以色列开始反击伊朗 地点有何讲究](https://so.toutiao.com/search?keyword=以色列开始反击伊朗+地点有何讲究)
 1. [民进党对傅崐萁访陆说三道四遭批](https://so.toutiao.com/search?keyword=民进党对傅崐萁访陆说三道四遭批)
-1. [25岁女子被丈夫割喉杀害后的340天](https://so.toutiao.com/search?keyword=25岁女子被丈夫割喉杀害后的340天)
-1. [银价涨幅已超过金价](https://so.toutiao.com/search?keyword=银价涨幅已超过金价)
 1. [在伊朗中国留学生谈以色列空袭伊朗](https://so.toutiao.com/search?keyword=在伊朗中国留学生谈以色列空袭伊朗)
-1. [关晓彤连续7年为鹿晗庆生](https://so.toutiao.com/search?keyword=关晓彤连续7年为鹿晗庆生)
-1. [纪委工作人员酒驾被查？官方通报](https://so.toutiao.com/search?keyword=纪委工作人员酒驾被查？官方通报)
-1. [主持人：人均存款11万为何感受不到](https://so.toutiao.com/search?keyword=主持人：人均存款11万为何感受不到)
 1. [老詹：没太多时间打我热爱的比赛了](https://so.toutiao.com/search?keyword=老詹：没太多时间打我热爱的比赛了)
-1. [大妈摆摊遇城管 直接将饼发给路人](https://so.toutiao.com/search?keyword=大妈摆摊遇城管+直接将饼发给路人)
-1. [极氪009光辉版正式上市](https://so.toutiao.com/search?keyword=极氪009光辉版正式上市)
-1. [儿子打工十几年没回家 老人急寻](https://so.toutiao.com/search?keyword=儿子打工十几年没回家+老人急寻)
-1. [官方否认骚扰女孩男子是镇书记儿子](https://so.toutiao.com/search?keyword=官方否认骚扰女孩男子是镇书记儿子)
-1. [周鸿祎公布6条选车标准](https://so.toutiao.com/search?keyword=周鸿祎公布6条选车标准)
 1. [哈马斯称以“侵略”伊朗升级局势](https://so.toutiao.com/search?keyword=哈马斯称以“侵略”伊朗升级局势)
 1. [西媒：纳乔拟下一站前往沙特或美国](https://so.toutiao.com/search?keyword=西媒：纳乔拟下一站前往沙特或美国)
-1. [男子地摊吃饭要求开发票还少给钱](https://so.toutiao.com/search?keyword=男子地摊吃饭要求开发票还少给钱)
 1. [以色列是面子的报复还是里子的攻击](https://so.toutiao.com/search?keyword=以色列是面子的报复还是里子的攻击)
 1. [证监会全力支持科技企业高水平发展](https://so.toutiao.com/search?keyword=证监会全力支持科技企业高水平发展)
 1. [媒体：这条航线为何能让台当局跳脚](https://so.toutiao.com/search?keyword=媒体：这条航线为何能让台当局跳脚)
 1. [乘风2024初舞台排名前十揭晓](https://so.toutiao.com/search?keyword=乘风2024初舞台排名前十揭晓)
 1. [摩根士丹利：理想L6未带来惊喜](https://so.toutiao.com/search?keyword=摩根士丹利：理想L6未带来惊喜)
-1. [曝特斯拉中国有部门裁员50%](https://so.toutiao.com/search?keyword=曝特斯拉中国有部门裁员50%)
-1. [山东化工厂爆炸致10死 5人被追责](https://so.toutiao.com/search?keyword=山东化工厂爆炸致10死+5人被追责)
 1. [美空军演习一次性出动12架B-2](https://so.toutiao.com/search?keyword=美空军演习一次性出动12架B-2)
-1. [《奔跑吧》刘涛灵魂拷问沙溢](https://so.toutiao.com/search?keyword=《奔跑吧》刘涛灵魂拷问沙溢)
 1. [媒体人：周冠宇不太可能成为巨星](https://so.toutiao.com/search?keyword=媒体人：周冠宇不太可能成为巨星)
 1. [证监会新规每年为投资者省200亿元](https://so.toutiao.com/search?keyword=证监会新规每年为投资者省200亿元)
 1. [2024春天田野里的新故事](https://so.toutiao.com/search?keyword=2024春天田野里的新故事)
